--- a/drivers/c/Makefile
+++ b/drivers/c/Makefile
@@ -1,5 +1,14 @@
+all: safecutoffpower fanstop pwmfancontrol
+
 safecutoffpower:  safecutoffpower.c 
 	gcc -o safecutoffpower safecutoffpower.c
+
+fanstop: fanstop.c
+	gcc -o fanStop fanstop.c
+
+pwmfancontrol: pwmControlFan.c
+	gcc -o pwmFanControl pwmControlFan.c
+
 clean:
 	rm -rf safecutoffpower
 
