Fix source file of makefile

--- a/drivers/c/Makefile
+++ b/drivers/c/Makefile
@@ -4,7 +4,7 @@ safecutoffpower:  safecutoffpower.c
 	gcc -o safecutoffpower safecutoffpower.c
 
 fanstop: fanstop.c
-	gcc -o fanStop fanstop.c
+	gcc -o fanStop fanStop.c
 
 pwmfancontrol: pwmControlFan.c
 	gcc -o pwmFanControl pwmControlFan.c
